<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="br.com.gusoliveira21.playmusic.viewviewmodel.music.MusicViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardMusic"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/custom_adp">

        <ImageView
            android:id="@+id/imgAlbum"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/texto_icone_musica"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_musica" />

        <TextView
            android:id="@+id/id_adapter_name_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:singleLine="true"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"

            android:padding="@dimen/size_padding"
            android:text="@string/app_name"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/size_texto_padrao"
            app:layout_constraintEnd_toStartOf="@+id/buttonFavorite"
            app:layout_constraintStart_toEndOf="@+id/imgAlbum"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idAdpNomeArtista"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:padding="@dimen/size_padding"
            android:singleLine="true"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:text="@string/texto_nome_artista"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/size_texto_rodape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/id_adapter_name_music"
            app:layout_constraintStart_toStartOf="@+id/id_adapter_name_music"
            app:layout_constraintTop_toBottomOf="@+id/id_adapter_name_music" />


        <ImageView
            android:id="@+id/buttonFavorite"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/favorite_music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_not_be_favorite_foreground" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>