<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainViewModel"
            type="br.com.gusoliveira21.playmusic.viewviewmodel.favorite.FavoriteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/id_linearlayout_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/size_layout_margin_esquerda"
            android:layout_marginLeft="@dimen/size_layout_margin_esquerda"
            android:layout_marginTop="@dimen/size_layout_margin_superior"
            android:layout_marginEnd="@dimen/size_layout_margin_direita"
            android:layout_marginRight="@dimen/size_layout_margin_direita"
            android:background="@drawable/custom_adp"
            android:orientation="vertical"
            android:padding="@dimen/size_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_musica" />

            <SeekBar
                android:id="@+id/barraMediaPlayer"
                android:layout_width="@dimen/size_seek_bar_largura"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/idLinearLayoutMain_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="40sp"
                android:paddingRight="40sp">

                <ImageView
                    android:id="@+id/bt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/texto_voltar"
                    app:srcCompat="@drawable/ic_skip_previous" />

                <ImageView
                    android:id="@+id/bt_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/texto_pause"
                    app:srcCompat="@drawable/ic_pause" />

                <ImageView
                    android:id="@+id/bt_play"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/texto_play"
                    app:srcCompat="@drawable/ic_play" />

                <ImageView
                    android:id="@+id/bt_advance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/texto_next"
                    app:srcCompat="@drawable/ic_skip_next" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>