<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:background="@drawable/custom_adp">

        <LinearLayout
            android:id="@+id/cardAlbum"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_adp_padding"
            android:divider="@color/black"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgAlbum"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/texto_icone_musica"
                app:srcCompat="@drawable/ic_musica" />

            <LinearLayout
                android:id="@+id/idLinearLayout_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_layout_margin"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/id_name_album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_padding"
                    android:singleLine="true"
                    android:marqueeRepeatLimit ="marquee_forever"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:text="@string/app_name"
                    android:textColor="@color/color_texto"
                    android:textSize="@dimen/size_texto_padrao" />

                <TextView
                    android:id="@+id/idNomeArtista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_padding"
                    android:singleLine="true"
                    android:marqueeRepeatLimit ="marquee_forever"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:text="@string/texto_nome_artista"
                    android:textColor="@color/color_texto"
                    android:textSize="@dimen/size_texto_rodape" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>